module/postponed/type_constructor/tests/inc/pair/homo_pair_double_difinition_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!
  {

    pair Bad : i32;
    pair Bad : i32;

  }
}
